[gd_scene load_steps=12 format=2]

[ext_resource path="res://Objects/RescueNenePlace.gd" type="Script" id=1]
[ext_resource path="res://OtherImages/icon.png" type="Texture" id=2]
[ext_resource path="res://GUI/Dimbo Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SFX/Objetos/Machete (no el actor).wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 38.1671

[sub_resource type="Animation" id=2]
resource_name = "show_icon"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_negation_label"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "show_icon"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "show_negation_label"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 10
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
resource_name = "machete"
length = 1.5
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 98.708,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="RescueNenePlace" type="Area2D"]
collision_layer = 8
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
z_index = 1
texture = ExtResource( 2 )

[node name="ShowNegation" type="AnimationPlayer" parent="."]
anims/show_icon = SubResource( 2 )
anims/show_negation_label = SubResource( 3 )

[node name="ShowIcon" type="AnimationPlayer" parent="."]
anims/show_icon = SubResource( 4 )
anims/show_negation_label = SubResource( 5 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -0.529732, 15.6271 )
z_index = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Node2D"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -35.2921
margin_top = -23.449
margin_right = 37.7079
margin_bottom = 27.551
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=15 freq=2]No tienes el objeto necesario para rescatar al nene[/wave]"
text = "No tienes el objeto necesario para rescatar al nene"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 2.0

[node name="ObjectSound" type="AnimationPlayer" parent="."]
anims/machete = SubResource( 7 )
[connection signal="body_entered" from="." to="." method="_on_RescueNenePlace_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_RescueNenePlace_body_exited"]
